[project]
name = "promptmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "exifread>=3.5.1",
    "google-generativeai>=0.8.6",
    "googletrans>=4.0.2",
    "natsort>=8.4.0",
    "novelai>=0.2.0",
    "pillow>=12.0.0",
    "pypng>=0.20220715.0",
    "pyqt6>=6.10.1",
    "pyside6>=6.10.1",
    "pywin32>=311",
    "requests>=2.32.5",
    "send2trash>=1.8.3",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
